--- a/mw-webapp/src/logic/wayPage/WayPage.module.scss
+++ b/mw-webapp/src/logic/wayPage/WayPage.module.scss
@@ -60,12 +60,6 @@ $labelMaxWidthBlock: 650px;
   margin-top: auto;
 }
 
-.wayActionMenu {
-  @media (max-width: $mediaWidthMobileBig) {
-    max-width: 45vw;
-  }
-}
-
 .privacyBlock,
 .compositeBlock {
   align-items: baseline;
